release: make native bundle builder cross-platform